# powerc

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.bat  clean.bat  go.mod  test.bat  test.sh
.github/workflows/: ci.yml  macos.yml  ubuntu.yml  windows.yml
docs/: powerc.ebnf
examples/: arith.pwc  array.pwc  assign.pwc  bitwise.pwc  block.pwc  call.pwc  closure.pwc  do-while.pwc  error.pwc  example1.pwc  fib.pwc  for.pwc  generics.pwc  geometry.pwc  global.pwc  hello.pwc  if-else.pwc  if-expr.pwc  if.pwc  import.pwc  inout.pwc  interface.pwc  loop.pwc  nested.pwc  nothing.pwc  null.pwc  range.pwc  struct.pwc  switch.pwc  try.pwc  type.pwc  typealias.pwc  void.pwc  while.pwc
include/: runtime.h
scanner/: scanner.go  token.go
src/: ast.c  ast.h  buffer.c  buffer.h  codegen.c  codegen.h  compiler.c  lexer.c  lexer.h  parser.c  parser.h  runtime.c
